<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_search_kyobo"
        android:icon="@drawable/ic_nav_search_tab"
        android:title="@string/nav_search_label" />

    <item
        android:id="@+id/nav_my"
        android:icon="@drawable/ic_nav_my"
        android:title="@string/nav_my" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_nav_category"
        android:title="@string/nav_category" />

</menu>
